--- a/result.html
+++ b/result.html
@@ -2,54 +2,130 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Translated Video</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Video Translation Result</title>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
     <style>
+        :root {
+            --primary-color: #3498db;
+            --secondary-color: #2ecc71;
+            --background-color: #f4f6f7;
+            --text-color: #2c3e50;
+        }
+
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
         body {
+            font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+            background-color: var(--background-color);
             display: flex;
             flex-direction: column;
             justify-content: center;
             align-items: center;
-            height: 100vh;
-            margin: 0;
-            background-color: #f0f0f0;
-            font-family: Arial, sans-serif;
+            min-height: 100vh;
+            padding: 20px;
+            line-height: 1.6;
         }
+
+        .container {
+            background-color: white;
+            border-radius: 12px;
+            box-shadow: 0 10px 25px rgba(0, 0, 0, 0.1);
+            padding: 30px;
+            width: 100%;
+            max-width: 800px;
+            text-align: center;
+            transition: transform 0.3s ease;
+        }
+
+        .container:hover {
+            transform: translateY(-5px);
+        }
+
         video {
-            max-width: 90%;
+            max-width: 100%;
             max-height: 70vh;
-            box-shadow: 0 4px 6px rgba(0,0,0,0.1);
-            margin-bottom: 20px;
+            border-radius: 8px;
+            margin-bottom: 25px;
+            box-shadow: 0 6px 12px rgba(0, 0, 0, 0.15);
         }
+
         .button-container {
             display: flex;
+            justify-content: center;
             gap: 20px;
+            margin-top: 20px;
         }
+
         .btn {
-            padding: 10px 20px;
+            display: inline-flex;
+            align-items: center;
+            justify-content: center;
+            padding: 12px 24px;
             border: none;
-            border-radius: 5px;
+            border-radius: 8px;
             cursor: pointer;
-            font-size: 16px;
-            transition: background-color 0.3s;
+            font-weight: 600;
+            text-transform: uppercase;
+            letter-spacing: 0.5px;
+            transition: all 0.3s ease;
+            gap: 10px;
         }
+
         .download-btn {
-            background-color: #4CAF50;
+            background-color: var(--secondary-color);
             color: white;
         }
+
+        .download-btn:hover {
+            background-color: #27ae60;
+            box-shadow: 0 4px 15px rgba(46, 204, 113, 0.3);
+        }
+
         .back-btn {
-            background-color: #2196F3;
+            background-color: var(--primary-color);
             color: white;
+        }
+
+        .back-btn:hover {
+            background-color: #2980b9;
+            box-shadow: 0 4px 15px rgba(52, 152, 219, 0.3);
+        }
+
+        .btn i {
+            font-size: 18px;
+        }
+
+        @media (max-width: 600px) {
+            .button-container {
+                flex-direction: column;
+                width: 100%;
+            }
+
+            .btn {
+                width: 100%;
+            }
         }
     </style>
 </head>
 <body>
-    <video id="translatedVideo" controls>
-        <source src="temp/final_translated_video.mp4" type="video/mp4">
-        Your browser does not support the video tag.
-    </video>
-    <div class="button-container">
-        <button class="btn download-btn" onclick="downloadVideo()">Download Video</button>
-        <button class="btn back-btn" onclick="goBack()">Translate Another Video</button>
+    <div class="container">
+        <video id="translatedVideo" controls>
+            <source src="temp/final_translated_video.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+        </video>
+        <div class="button-container">
+            <button class="btn download-btn" onclick="downloadVideo()">
+                <i class="fas fa-download"></i> Download Video
+            </button>
+            <button class="btn back-btn" onclick="goBack()">
+                <i class="fas fa-redo"></i> Translate Another Video
+            </button>
+        </div>
     </div>
 
     <script>
